--- a/style_this.css
+++ b/style_this.css
@@ -1,12 +1,4 @@
 body {
   background-color: lightblue;
-}
-
-h1 {
-  color: navy;
-  margin-left: 20px;
-}
-
-p {
-  font-family: "Lucida Console", Courier, monospace;
+  font-family: "Courier New";
 }
