--- a/style_this.css
+++ b/style_this.css
@@ -6,3 +6,10 @@ body {
 img {
   border-radius: 50%;
 }
+
+.container {
+			margin: 25vh auto 10vh auto;
+			max-width: 100%;
+			padding: 0 20px;
+			width: 40ch;
+		}
