--- a/style_this.css
+++ b/style_this.css
@@ -8,10 +8,9 @@ img {
 }
 
 .container {
-	margin: 25vh auto 10vh auto;
-	max-width: 100%;
-	padding: 0 20px;
-	width: 40ch;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .responsive {
