--- a/style_this.css
+++ b/style_this.css
@@ -8,9 +8,10 @@ img {
 }
 
 .container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	margin: 25vh auto 10vh auto;
+	max-width: 100%;
+	padding: 0 20px;
+	width: 40ch;
 }
 
 .responsive {
