--- a/style_this.css
+++ b/style_this.css
@@ -1,6 +1,8 @@
 body {
   background-color: lightslategrey;
   font-family: "Courier New";
+  font-size: 2rem;
+  line-height: 1.4;
   text-align: center;
 }
 
