--- a/style_this.css
+++ b/style_this.css
@@ -11,10 +11,9 @@ img {
 }
 
 .container {
-	margin: 25vh auto 10vh auto;
+	margin: 20vh auto 20vh auto;
 	max-width: 100%;
-	padding: 0 20px;
-	width: 40ch;
+	width: auto;
 }
 
 .responsive {
