--- a/style_this.css
+++ b/style_this.css
@@ -1,8 +1,7 @@
 body {
 	background-color: lightslategrey;
 	font-family: "Courier New";
-	font-size: 2rem;
-	line-height: 1.4;
+	font-size: medium;
 	text-align: center;
 }
 
@@ -28,4 +27,5 @@ a {
 
 p { 
 	text-align: left;
+	margin: 10px auto 10px auto
 }
