--- a/style_this.css
+++ b/style_this.css
@@ -1,7 +1,7 @@
 body {
 	background-color: lightslategrey;
 	font-family: "Courier New";
-	font-size: large;
+	font-size: 2rem;
 	text-align: center;
 }
 
