--- a/style_this.css
+++ b/style_this.css
@@ -1,6 +1,6 @@
 body {
 	background-color: lightslategrey;
-	font-variant-ligatures: common-ligatures;
+	text-align: center;
 }
 
 img {
@@ -24,9 +24,9 @@ a {
 }
 
 p {
-	font-family: Courier;
+	font-family: "Courier New";
 	font-size: 2rem;
-	text-align: center;
+	font-variant-ligatures: common-ligatures;
 }
 
 
