--- a/style_this.css
+++ b/style_this.css
@@ -29,4 +29,16 @@ p {
 	font-variant-ligatures: common-ligatures;
 }
 
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 100px) {
+  .column {
+    width: 100%;
+  }
+} 
 
