--- a/style_this.css
+++ b/style_this.css
@@ -8,9 +8,13 @@ img {
 }
 
 .container {
-	margin: 10vh auto 10vh auto;
+	/*margin: 10vh auto 10vh auto;
 	max-width: 100%;
-	width: auto;
+	width: auto; */
+	margin: 25vh auto 10vh auto;
+	max-width: 100%;
+	padding: 0 20px;
+	width: 40ch;
 }
 
 .responsive {
@@ -33,8 +37,6 @@ p {
 .row {
   	display: flex;
 	width: 20%;
-	align-content: center;
-	justify-content: center;
 }
 
 .column {
