--- a/style_this.css
+++ b/style_this.css
@@ -44,10 +44,10 @@ p {
   	padding: 5px;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other 
 @media screen and (max-width: 100px) {
   	.column {
    		width: 100%;
   	}
 } 
-
+*/
