--- a/style_this.css
+++ b/style_this.css
@@ -11,10 +11,10 @@ img {
 	/*margin: 10vh auto 10vh auto;
 	max-width: 100%;
 	width: auto; */
-	margin: 25vh auto 10vh auto;
+	margin: 10vh auto 10vh auto;
 	max-width: 100%;
-	padding: 0 20px;
-	width: 40ch;
+	/*padding: 0 20px;*/
+	width: 100ch;
 }
 
 .responsive {
