--- a/style_this.css
+++ b/style_this.css
@@ -1,6 +1,5 @@
 body {
 	background-color: lightslategrey;
-	text-align: center;
 }
 
 img {
@@ -37,6 +36,7 @@ p {
 .row {
   	display: flex;
 	width: 20%;
+	margin:0 auto;
 }
 
 .column {
