--- a/style_this.css
+++ b/style_this.css
@@ -12,8 +12,8 @@ img {
 	max-width: 100%;
 	width: auto; */
 	margin: 10vh auto 10vh auto;
-	/*max-width: 100%;
-	padding: 0 40px; */
+	max-width: 100%;
+	/*padding: 0 40px; */
 	width: 80%;
 }
 
