--- a/style_this.css
+++ b/style_this.css
@@ -47,10 +47,10 @@ p {
   	padding: 5px;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other 
-@media screen and (max-width: 100px) {
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other*/ 
+@media screen and (max-width: 50px) {
   	.column {
    		width: 100%;
   	}
 } 
-*/
+
