--- a/style_this.css
+++ b/style_this.css
@@ -7,18 +7,6 @@ img {
 	margin: 0 auto;
 }
 
-.container {
-	margin: 10vh auto 10vh auto;
-	max-width: 100%;
-	width: 80%;
-}
-
-.responsive {
-	width: auto;
-	max-width: 300px;
-	height: auto;
-}
-
 a { 
 	color: currentColor; 
 }
@@ -32,6 +20,18 @@ p {
 	text-align: justify;
 }
 
+.container {
+	margin: 10vh auto 10vh auto;
+	max-width: 100%;
+	width: 80%;
+}
+
+.responsive {
+	width: auto;
+	max-width: 300px;
+	height: auto;
+}
+
 .row {
   	display: flex;
 	width: 20%;
@@ -41,6 +41,11 @@ p {
 .column {
   	flex: 33.33%;
   	padding: 5px;
+}
+
+.highlightme { 
+	background-color: darkslategrey;
+	color: #FFFFF0;
 }
 
 
